Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -696,6 +696,8 @@
                     })}
                   </div>
                 )}
+
+                <div className="flex gap-3">
                 </div>
 
                 <div className="flex gap-3">
